--- a/index.html
+++ b/index.html
@@ -29,41 +29,41 @@
     <section>
         <h2>Publicações recentes</h1>
             <div style="display: flex;">
-                <div class="cardRecent">
+                <a class="cardRecent" href="blog.html">
                     <img src="imagens/italiana.jpg" alt="Prato típico italiano.">
                     <div>
                         <h3>Culinária Italiana</h3>
                         <p>Muitas pizzas e massas. Sabores incríveis direto de casa.</p>
                     </div>
-                </div>
-                <div class="cardRecent">
+                </a>
+                <a class="cardRecent" href="blog.html">
                     <img src="imagens/japao.jpg" alt="Prato típico japonês.">
                     <div>
                         <h3>Culinária Japonesa</h3>
                         <p>A culinária onde os frutos do mar possuem um destaque especial.</p>
                     </div>
-                </div>
-                <div class="cardRecent">
+                </a>
+                <a class="cardRecent" href="blog.html">
                     <img src="imagens/india.jpg" alt="Prato típico indiano.">
                     <div>
                         <h3>Culinária Indiana</h3>
                         <p>Sabores muito distintos do ocidente, fazendo um ótimo uso das especiarias da região.</p>
                     </div>
-                </div>
-                <div class="cardRecent more">
+                </a>
+                <a class="cardRecent more" href="blog.html">
                     <h2>Ver todos</h2>
-                </div>
+                </a>
             </div>
     </section>
     <section>
         <h2>O nosso blog</h2>
         <div id="nossaH">
             <div style="max-width: 600px;">
-                <p>Confira o nosso blog para sempre se amnter atualizado das últimas novidades do passado. Aqui buscamos
+                <p>Confira o nosso blog para sempre se manter atualizado das últimas novidades do passado. Aqui buscamos
                     unir receitas deliciosas de culturas ao redor do planeta ao mesmo tempo que trazemos o que há por
                     trás disso, como o aspecto cultural afeta a alimentação da população e quão rico é tudo isso. Acesse
                     a área blog do site para as últimas publicações.</p>
-                <a href="" class="aButton">Saiba mais</a>
+                <a href="blog.html" class="aButton">Saiba mais</a>
             </div>
             <img src="imagens/cultura.jpg" id="sectionImage" alt="">
         </div>
