--- a/contato.html
+++ b/contato.html
@@ -7,9 +7,7 @@
     <title>FLAVORA | Contato</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
@@ -26,11 +24,10 @@
         </nav>
         <!-- conteudo do cabeçalho -->
     </header>
-    
-    <footer id="rodape">
-        <a href="https://www.google.com/search?q=instagram&oq=istagram&aqs=chrome.1.69i57j0i10i131i433l2j0i131i433l2j0i10i131i433l3j0i131i433l2.2700j0j7&sourceid=chrome&ie=UTF-8"
-            target="_blank"><img src="imagens/inst.vn.jpg" /> </a>
 
+    <footer id="rodape">
+        <a href="https://instagram.com/" target="_blank"><img src="imagens/instagram.png" /></a>
+        <a href="https://www.youtube.com/" target="_blank"><img src="imagens/youtube.png" /></a>
         <p>&copy Matheus & Vicente 2021<br><a href="mailto:flavora@food.com">flavora@food.com</a></p>
     </footer>
 </body>
