--- a/equipe.html
+++ b/equipe.html
@@ -52,8 +52,8 @@
         </div>
     </section>
     <footer id="rodape">
-        <a href="https://www.google.com/search?q=instagram&oq=istagram&aqs=chrome.1.69i57j0i10i131i433l2j0i131i433l2j0i10i131i433l3j0i131i433l2.2700j0j7&sourceid=chrome&ie=UTF-8" target="_blank"><img src="imagens/inst.vn.jpg" /> </a>
-
+        <a href="https://instagram.com/" target="_blank"><img src="imagens/instagram.png" /></a>
+        <a href="https://www.youtube.com/" target="_blank"><img src="imagens/youtube.png" /></a>
         <p>&copy Matheus & Vicente 2021<br><a href="mailto:flavora@food.com">flavora@food.com</a></p>
     </footer>
 </body>
