--- a/blog.html
+++ b/blog.html
@@ -121,7 +121,7 @@
             alimento saátvico leva você à estados mais elevados de consciência. O alimento raajsic é a base da atividade e do movimento. A comida taamsica traz sentimentos negativos.</p>
     </section>
     <footer id="rodape">
-        <a href="https://instagram.com/" target="_blank"><img src="imagens/instagram.png" /></a>
+        <a href="https://www.instagram.com/" target="_blank"><img src="imagens/instagram.png" /></a>
         <a href="https://www.youtube.com/" target="_blank"><img src="imagens/youtube.png" /></a>
         <p>&copy Matheus & Vicente 2021<br><a href="mailto:flavora@food.com">flavora@food.com</a></p>
     </footer>
