--- a/contato.html
+++ b/contato.html
@@ -17,16 +17,16 @@
         <img src="imagens/logo.svg" alt="Logo FLAVORA" id="logo">
         <!--menu-->
         <nav id="menu">
-            <a class="selected" href="index.html">Início</a>
+            <a href="index.html">Início</a>
             <a href="equipe.html">Equipe</a>
             <a href="blog.html">Blog</a>
-            <a href="contato.html">Contato</a>
+            <a class="selected" href="contato.html">Contato</a>
         </nav>
         <!-- conteudo do cabeçalho -->
     </header>
 
     <footer id="rodape">
-        <a href="https://instagram.com/" target="_blank"><img src="imagens/instagram.png" /></a>
+        <a href="https://www.instagram.com/" target="_blank"><img src="imagens/instagram.png" /></a>
         <a href="https://www.youtube.com/" target="_blank"><img src="imagens/youtube.png" /></a>
         <p>&copy Matheus & Vicente 2021<br><a href="mailto:flavora@food.com">flavora@food.com</a></p>
     </footer>
