--- a/equipe.html
+++ b/equipe.html
@@ -7,7 +7,9 @@
     <title>FLAVORA | Equipe</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/equipe.css">
 </head>
@@ -26,18 +28,20 @@
     </header>
     <section id="servicos">
         <h1>O que fazemos?</h1>
-        <p>Somos uma equipe focada em agregar conteúdos sobre as mais diversas culturas ao redor do mundo juntamente a seus paladares, para trazer uma culinária diversificada e conhecimento para você, nosso leitor.</p>
-        <p>Mantemos uma regularidade em nossas postagens mas com um conteúdo muito bem trabalhado e desenvolvido com excelente curadoria, para que sejamos a melhor fonte de conhecimento sobre esss assuntos disponíveis online.
+        <p>Somos uma equipe focada em agregar conteúdos sobre as mais diversas culturas ao redor do mundo juntamente a
+            seus paladares, para trazer uma culinária diversificada e conhecimento para você, nosso leitor.</p>
+        <p>Mantemos uma regularidade em nossas postagens mas com um conteúdo muito bem trabalhado e desenvolvido com
+            excelente curadoria, para que sejamos a melhor fonte de conhecimento sobre esss assuntos disponíveis online.
         </p>
     </section>
     <section id="membros">
         <h1>A Equipe</h1>
         <div id="membersHolder">
             <div class="member">
-                <img src="imagens/vicente.jpg" class="fotoMembro">
+                <img src="imagens/matheus.jpeg" class="fotoMembro">
                 <hgroup>
-                    <h2>Vicente K. Parmigiani</h2>
-                    <h3>Desenvolvedor front-end</h3>
+                    <h2>Matheus Vagner dos Santos</h2>
+                    <h3>Programador web</h3>
                 </hgroup>
                 <p>Descrição</p>
             </div>
@@ -47,12 +51,14 @@
                     <h2>Vicente K. Parmigiani</h2>
                     <h3>Desenvolvedor front-end</h3>
                 </hgroup>
-                <p>Descrição</p>
+                <p>Estudante de Química da UFPR, com interesse em desenvolvimento de aplicativos, websites e programação
+                    em geral. Já estudou desenvolvimento por conta própria de sites e aplicativos para Android, além de
+                    alguns experimentos por fora.</p>
             </div>
         </div>
     </section>
     <footer id="rodape">
-        <a href="https://instagram.com/" target="_blank"><img src="imagens/instagram.png" /></a>
+        <a href="https://www.instagram.com/" target="_blank"><img src="imagens/instagram.png" /></a>
         <a href="https://www.youtube.com/" target="_blank"><img src="imagens/youtube.png" /></a>
         <p>&copy Matheus & Vicente 2021<br><a href="mailto:flavora@food.com">flavora@food.com</a></p>
     </footer>
