--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
     </section>
     <footer id="rodape">
-        <a href="https://instagram.com/" target="_blank"><img src="imagens/instagram.png" /></a>
+        <a href="https://www.instagram.com/" target="_blank"><img src="imagens/instagram.png" /></a>
         <a href="https://www.youtube.com/" target="_blank"><img src="imagens/youtube.png" /></a>
         <p>&copy Matheus & Vicente 2021<br><a href="mailto:flavora@food.com">flavora@food.com</a></p>
     </footer>
