melhorias nos contatos e adição de fontes no blog

--- a/blog.html
+++ b/blog.html
@@ -85,6 +85,7 @@
                 <td>Macarrão feito com farinha de grano duro com formato de orelhinhas.</td>
             </tr>
         </table>
+        <p>Fonte: <a href="https://www.soitaliano.com.br/conteudo/CulinariaItaliana.php#:~:text=A%20culin%C3%A1ria%20italiana%20apresenta%20influ%C3%AAncias,%2C%20tomate%2C%20piment%C3%A3o%20e%20milho">Soitaliano</a></p>
     </section>
     <section>
         <h2>Culinária Japonesa</h2>
@@ -101,6 +102,7 @@
         <p>A bebida predileta dos japoneses é o chá verde. É servido durante as refeições ou em reunião de pessoas da mesma forma que o " cafezinho" do povo brasileiro. Pode-se dizer que o chá verde está para o povo japonês, assim como o "cafezinho" está
             para o povo brasileiro.</P>
         Outras bebidas populares no Japão são o chá preto, o saquê (vinho de arroz), o shochu (aguardente de arroz) e umeshu (licor de ameixa).</P>
+        <p>Fonte: <a href="https://medium.com/@megadicas/culinaria-japonesa-comida-asiatica-5de14424a184">Mega Dicas</a> e <a href="https://www.sp.br.emb-japan.go.jp/itpr_pt/gastronomia.html">Consulado do Japão em São Paulo</a></p>
     </section>
     <section>
         <h2>Culinária Indiana</h2>
@@ -119,7 +121,8 @@
             1960. Hoje, existem cerca de 80.000 restaurantes indianos na América. Pouco se sabe sobre os hábitos alimentares da primeira civilização indiana, (a Civilização do Vale do Indo), porque o idioma antigo ainda não foi decifrado. A pimenta é
             conhecida como o rei das especiarias, porque combina bem com tudo. O sistema alimentar indiano classifica os alimentos em três categorias – saátvico (legumes frescos e suco), raajsic (comida oleosa e picante) e taamsico (carne e licor). O
             alimento saátvico leva você à estados mais elevados de consciência. O alimento raajsic é a base da atividade e do movimento. A comida taamsica traz sentimentos negativos.</p>
-    </section>
+            <p>Fonte: <a href="https://deliciasculinarias.com.br/culinaria-indiana/">Delícias Culinárias</a> e <a href="https://www.adventureclub.com.br/blog/curiosidades/ervas-temperos-e-especiarias-conheca-a-rica-culinaria-da-india/#:~:text=Entre%20as%20especiarias%20mais%20usadas,mostarda%20preta%2C%20c%C3%BArcuma%20e%20cravo.">Adventure Club</a></p>
+        </section>
     <footer id="rodape">
         <a href="https://www.instagram.com/" target="_blank"><img src="imagens/instagram.png" /></a>
         <a href="https://www.youtube.com/" target="_blank"><img src="imagens/youtube.png" /></a>
