--- a/contato.html
+++ b/contato.html
@@ -26,52 +26,57 @@
         </nav>
         <!-- conteudo do cabeçalho -->
     </header>
-
-    <form>
-        <fieldset id="usuario">
-            <legend>Dados principais</legend>
-            <label for="nome">Nome completo: </label>
-            <input type="text" name="nome" id="nome" placeholder="Nome e Sobrenome">
-            <br>
-            <label for="email">Email: </label>
-            <input type="email" name="email" id="email" placeholder="email@exemplo.com">
-            <br>
-            <label for="tel">Telefone: </label>
-            <input type="tel" name="tel" id="tel" placeholder="(xx) xxxxx-xxxx">
-            <br>
-            <fieldset>
-                <legend>Gênero</legend>
-                <input type="radio" name="sexo" id="masc" value="masc">
-                <label for="masc">Masculino</label>
-                <input type="radio" name="sexo" id="fem" value="fem">
-                <label for="fem">Feminino</label>
-                <input type="radio" name="sexo" id="outro" value="other">
-                <label for="outro">Outro</label>
+    <h2>Converse com a gente!</h1>
+        <form action="index.html" method="POST">
+            <fieldset id="usuario">
+                <legend>Dados principais</legend>
+                <label for="nome">Nome completo: </label>
+                <input type="text" name="nome" id="nome" placeholder="Nome e Sobrenome">
+                <br>
+                <label for="nasc">Data de nascimento: </label>
+                <input type="date" name="nasc" id="nasc">
+                <br>
+                <label for="email">Email: </label>
+                <input type="email" name="email" id="email" placeholder="email@exemplo.com">
+                <br>
+                <label for="tel">Telefone: </label>
+                <input type="tel" name="tel" id="tel" placeholder="(xx) xxxxx-xxxx">
+                <br>
+                <fieldset>
+                    <legend>Gênero</legend>
+                    <input type="radio" name="sexo" id="masc" value="masc">
+                    <label for="masc">Masculino</label>
+                    <input type="radio" name="sexo" id="fem" value="fem">
+                    <label for="fem">Feminino</label>
+                    <input type="radio" name="sexo" id="outro" value="other">
+                    <label for="outro">Outro</label>
+                </fieldset>
             </fieldset>
-        </fieldset>
 
-        <fieldset id="endereço">
-            <legend>Endereço</legend>
-            <label for="rua">Endereço: </label>
-            <input type="text" name="rua" id="rua" placeholder="Rua, número e bairro">
-            <br>
-            <label for="cidade">Cidade</label>
-            <input type="text" name="cidade" id="cidade" placeholder="Nome da Cidade">
-            <br>
-            <label for="estado">Estado: </label>
-            <input type="text" name="estado" id="estado" placeholder="Ex.: PR">
-        </fieldset>
-        <fieldset>
-            <legend>Mensagem</legend>
-            <textarea name="message" id="message" cols="120" rows="10" placeholder="Escreva aqui a sua mensagem e após clique em enviar."></textarea>
-        </fieldset>
-        <input type="submit" value="Enviar">
-    </form>
-    <footer id="rodape">
-        <a href="https://www.instagram.com/" target="_blank"><img src="imagens/instagram.png" /></a>
-        <a href="https://www.youtube.com/" target="_blank"><img src="imagens/youtube.png" /></a>
-        <p>&copy Matheus & Vicente 2021<br><a href="mailto:flavora@food.com">flavora@food.com</a></p>
-    </footer>
+            <fieldset id="endereço">
+                <legend>Endereço</legend>
+                <label for="rua">Endereço: </label>
+                <input type="text" name="rua" id="rua" placeholder="Rua, número e bairro">
+                <br>
+                <label for="cidade">Cidade</label>
+                <input type="text" name="cidade" id="cidade" placeholder="Nome da Cidade">
+                <br>
+                <label for="estado">Estado: </label>
+                <input type="text" name="estado" id="estado" placeholder="Ex.: PR">
+            </fieldset>
+            <fieldset>
+                <legend>Mensagem</legend>
+                <textarea name="message" id="message" cols="120" rows="10"
+                    placeholder="Escreva aqui a sua mensagem e após clique em enviar."></textarea>
+            </fieldset>
+            <input type="reset" value="Limpar">
+            <input type="submit" value="Enviar" onclick="alert('Mensagem enviada!')">
+        </form>
+        <footer id="rodape">
+            <a href="https://www.instagram.com/" target="_blank"><img src="imagens/instagram.png" /></a>
+            <a href="https://www.youtube.com/" target="_blank"><img src="imagens/youtube.png" /></a>
+            <p>&copy Matheus & Vicente 2021<br><a href="mailto:flavora@food.com">flavora@food.com</a></p>
+        </footer>
 </body>
 
 </html>
