--- a/equipe.html
+++ b/equipe.html
@@ -43,7 +43,9 @@
                     <h2>Matheus Vagner dos Santos</h2>
                     <h3>Programador web</h3>
                 </hgroup>
-                <p>Descrição</p>
+                <p>Técnico em energias renovaveis e atuante na área de analista de licitação, estudo lógica de
+                    programação e desenvolvimento de websites atraves de cursos realizados para aprimoramento de
+                    conhecimento e por hobby. E tenho um grande afeto por esportes e animais.</p>
             </div>
             <div class="member">
                 <img src="imagens/vicente.jpg" class="fotoMembro">
