--- a/contato.html
+++ b/contato.html
@@ -81,9 +81,9 @@
                 <p>
                     Mensagem: "<span id="fmensagem"></span>"
                 </p>
+                <input class="button important" type="reset" value="Limpar">
+                <input class="button" type="submit" value="Enviar" onclick="alert('Mensagem enviada!')">
             </fieldset>
-            <input type="reset" value="Limpar">
-            <input type="submit" value="Enviar" onclick="alert('Mensagem enviada!')">
         </form>
         <footer id="rodape">
             <a href="https://www.instagram.com/" target="_blank"><img src="imagens/instagram.png" /></a>
