--- a/blog.html
+++ b/blog.html
@@ -4,10 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="imagens/logo.png">
     <title>FLAVORA | Blog</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/blog.css">
 </head>
@@ -28,12 +31,21 @@
         <h2>Culinária Italiana</h2>
         <p class="pubBy">Publicado por Vicente Parmigiani em 03/09/2021.</p>
         <img src="imagens/italiana.jpg" class="imagePost" />
-        <p>A culinária italiana evoluiu através dos séculos, ao longo das mais variadas alterações sociais e políticas; suas raízes podem ser traçadas até o século IV a.C. Mudanças significantes ocorreram com a descoberta do Novo Mundo, que ajudaram a moldar
-            muito do que é conhecido como a culinária italiana hoje em dia, através da introdução de ingredientes como batatas, tomates, pimentões e milho, todos eles parte central da cozinha daquele país, e que no entanto só foram introduzidos em grande
+        <p>A culinária italiana evoluiu através dos séculos, ao longo das mais variadas alterações sociais e políticas;
+            suas raízes podem ser traçadas até o século IV a.C. Mudanças significantes ocorreram com a descoberta do
+            Novo Mundo, que ajudaram a moldar
+            muito do que é conhecido como a culinária italiana hoje em dia, através da introdução de ingredientes como
+            batatas, tomates, pimentões e milho, todos eles parte central da cozinha daquele país, e que no entanto só
+            foram introduzidos em grande
             escala a partir do século XVIII.</p>
-        <p>É uma das culinárias mais populares do mundo, com suas pizzas, massas, vinhos e outros tipos de preparações. Tanto ingredientes como pratos mudam de região para região do país. Existem diversos pratos regionais importantes que também assumiram
-            caráter nacional, enquanto diversos pratos proliferaram, em diversas variantes, por todo o mundo. Queijo e vinho são uma parte importantíssima da cozinha do país, desempenhando diferentes papeis tanto regionalmente quanto nacionalmente, com
-            sua grande variedade e leis de regulamentação. Também o café, mais especificamente o espresso, assumiu um papel de destaque relevante na cultura gastronômica da Itália.</p>
+        <p>É uma das culinárias mais populares do mundo, com suas pizzas, massas, vinhos e outros tipos de preparações.
+            Tanto ingredientes como pratos mudam de região para região do país. Existem diversos pratos regionais
+            importantes que também assumiram
+            caráter nacional, enquanto diversos pratos proliferaram, em diversas variantes, por todo o mundo. Queijo e
+            vinho são uma parte importantíssima da cozinha do país, desempenhando diferentes papeis tanto regionalmente
+            quanto nacionalmente, com
+            sua grande variedade e leis de regulamentação. Também o café, mais especificamente o espresso, assumiu um
+            papel de destaque relevante na cultura gastronômica da Itália.</p>
         <br><br>
         <h3>Pratos típicos de algumas regiões</h3>
         <p>Na tabela abaixo podemos observar os principais pratos italianos e suas principais informações.</p>
@@ -46,7 +58,8 @@
             <tr>
                 <td>Spaghetti</td>
                 <td>Campania</td>
-                <td>O spaghetti pode ser servido com uma variedade de molhos, o mais comum é com molho de tomate com queijo ralado e folhas de manjericão.</td>
+                <td>O spaghetti pode ser servido com uma variedade de molhos, o mais comum é com molho de tomate com
+                    queijo ralado e folhas de manjericão.</td>
             </tr>
             <tr>
                 <td>Tortellini</td>
@@ -72,7 +85,8 @@
             <tr>
                 <td>Polenta</td>
                 <td>Norte da Itália</td>
-                <td>A polenta que é feita à base de farinha de milho e água é historicamente conhecida na Itália como prato dos pobres.</td>
+                <td>A polenta que é feita à base de farinha de milho e água é historicamente conhecida na Itália como
+                    prato dos pobres.</td>
             </tr>
             <tr>
                 <td>Tiramisú</td>
@@ -85,44 +99,83 @@
                 <td>Macarrão feito com farinha de grano duro com formato de orelhinhas.</td>
             </tr>
         </table>
-        <p>Fonte: <a href="https://www.soitaliano.com.br/conteudo/CulinariaItaliana.php#:~:text=A%20culin%C3%A1ria%20italiana%20apresenta%20influ%C3%AAncias,%2C%20tomate%2C%20piment%C3%A3o%20e%20milho">Soitaliano</a></p>
+        <p>Fonte: <a
+                href="https://www.soitaliano.com.br/conteudo/CulinariaItaliana.php#:~:text=A%20culin%C3%A1ria%20italiana%20apresenta%20influ%C3%AAncias,%2C%20tomate%2C%20piment%C3%A3o%20e%20milho">Soitaliano</a>
+        </p>
     </section>
     <section>
         <h2>Culinária Japonesa</h2>
         <p class="pubBy">Publicado por Vicente Parmigiani em 03/09/2021.</p>
         <img src="imagens/japao.jpg" class="imagePost" />
-        <p>A culinária tradicional japonesa consiste em pratos preparados de arroz, sopa de misso (pasta de soja), peixe ou carne acompanhados de tsukemono (picles). Os temperos mais comuns na cozinha japonesa são o shoyu (molho de soja), o wasabi (raiz
-            forte), o misso (pasta de soja), o karashi (mostarda), mirin e sake (bebida alcoólica a base de arroz) e dashi (caldo de peixe ou carne).</P>
-        <p>Pelo fato do Japão ser um país formado por ilhas, os japoneses criaram o hábito de utilizar o mar como fonte de alimento de onde retiram diversos tipos de peixes, moluscos e algas marinhas. O peixe é muito apreciado na culinária japonesa e consiste
-            uma importante fonte de nutrição. Ele é o ingrediente fundamental no preparo de pratos típicos como o sashimi (peixe cru) e o sushi (pequenos bocados de arroz temperados com vinagre cobertos com fatias de peixe cru).</P>
-        <p>A carne foi introduzida no Japão no século 19, até então não fazia parte da dieta tradicional japonesa. Foram criados novos pratos utilizando carne bovina, suína e de frango. Atualmente, o yakitori (espetinhos de frango grelhado) são muito populares,
-            assim como o sukiyaki que consiste em finas fatias de carne preparadas junto com verduras e tofu (queijo de soja).</P>
-        <p>Apesar do macarrão ser originário da China, tornou-se muito popular no Japão. Existem vários tipos de macarrão, e dentre as variedades mais consumidas estão o soba (macarrão de trigo sarraceno), o udon e somen (macarrão de trigo) . O lamen , um
-            dos pratos mais populares no Japão, é preparado com caldo e servido com vegetais e fatias de carne, também é possível preparar o famoso yakissoba (macarrão frito) com o mesmo tipo de macarrão.</P>
-        <p>A bebida predileta dos japoneses é o chá verde. É servido durante as refeições ou em reunião de pessoas da mesma forma que o " cafezinho" do povo brasileiro. Pode-se dizer que o chá verde está para o povo japonês, assim como o "cafezinho" está
+        <p>A culinária tradicional japonesa consiste em pratos preparados de arroz, sopa de misso (pasta de soja), peixe
+            ou carne acompanhados de tsukemono (picles). Os temperos mais comuns na cozinha japonesa são o shoyu (molho
+            de soja), o wasabi (raiz
+            forte), o misso (pasta de soja), o karashi (mostarda), mirin e sake (bebida alcoólica a base de arroz) e
+            dashi (caldo de peixe ou carne).</P>
+        <p>Pelo fato do Japão ser um país formado por ilhas, os japoneses criaram o hábito de utilizar o mar como fonte
+            de alimento de onde retiram diversos tipos de peixes, moluscos e algas marinhas. O peixe é muito apreciado
+            na culinária japonesa e consiste
+            uma importante fonte de nutrição. Ele é o ingrediente fundamental no preparo de pratos típicos como o
+            sashimi (peixe cru) e o sushi (pequenos bocados de arroz temperados com vinagre cobertos com fatias de peixe
+            cru).</P>
+        <p>A carne foi introduzida no Japão no século 19, até então não fazia parte da dieta tradicional japonesa. Foram
+            criados novos pratos utilizando carne bovina, suína e de frango. Atualmente, o yakitori (espetinhos de
+            frango grelhado) são muito populares,
+            assim como o sukiyaki que consiste em finas fatias de carne preparadas junto com verduras e tofu (queijo de
+            soja).</P>
+        <p>Apesar do macarrão ser originário da China, tornou-se muito popular no Japão. Existem vários tipos de
+            macarrão, e dentre as variedades mais consumidas estão o soba (macarrão de trigo sarraceno), o udon e somen
+            (macarrão de trigo) . O lamen , um
+            dos pratos mais populares no Japão, é preparado com caldo e servido com vegetais e fatias de carne, também é
+            possível preparar o famoso yakissoba (macarrão frito) com o mesmo tipo de macarrão.</P>
+        <p>A bebida predileta dos japoneses é o chá verde. É servido durante as refeições ou em reunião de pessoas da
+            mesma forma que o " cafezinho" do povo brasileiro. Pode-se dizer que o chá verde está para o povo japonês,
+            assim como o "cafezinho" está
             para o povo brasileiro.</P>
-        Outras bebidas populares no Japão são o chá preto, o saquê (vinho de arroz), o shochu (aguardente de arroz) e umeshu (licor de ameixa).</P>
-        <p>Fonte: <a href="https://medium.com/@megadicas/culinaria-japonesa-comida-asiatica-5de14424a184">Mega Dicas</a> e <a href="https://www.sp.br.emb-japan.go.jp/itpr_pt/gastronomia.html">Consulado do Japão em São Paulo</a></p>
+        Outras bebidas populares no Japão são o chá preto, o saquê (vinho de arroz), o shochu (aguardente de arroz) e
+        umeshu (licor de ameixa).</P>
+        <p>Fonte: <a href="https://medium.com/@megadicas/culinaria-japonesa-comida-asiatica-5de14424a184">Mega Dicas</a>
+            e <a href="https://www.sp.br.emb-japan.go.jp/itpr_pt/gastronomia.html">Consulado do Japão em São Paulo</a>
+        </p>
     </section>
     <section>
         <h2>Culinária Indiana</h2>
         <p class="pubBy">Publicado por Vicente Parmigiani em 03/09/2021.</p>
         <img src="imagens/india.jpg" class="imagePost" />
-        <p>A culinária da Índia é considerada uma das culinárias mais diversificadas do mundo. A imigração extensiva e a mistura de culturas por muitos milênios introduziram muitas influências alimentares e culturais. O clima “bipolar” da Índia, que vai
-            do tropical ao frio, disponibilizou uma ampla variedade de ingredientes para as muitas escolas de culinária que existem por lá. Em muitos casos, a comida se tornou um marcador de identidade religiosa e social, com vários tabus e preferências.
-            Um exemplo disso é que um segmento da população jainista não consome raízes ou vegetais subterrâneos, isso levou certos grupos a inovar radicalmente com as fontes alimentares consideradas aceitáveis. O vegetarianismo a longa data entre as
-            secções da Índia ‘s hindus, budistas e jainistas têm exercido uma forte influência sobre a culinária indiana. As pessoas que seguem uma dieta vegetariana rigorosa representam de 20 a 42 por cento da população indiana, enquanto menos de 30
+        <p>A culinária da Índia é considerada uma das culinárias mais diversificadas do mundo. A imigração extensiva e a
+            mistura de culturas por muitos milênios introduziram muitas influências alimentares e culturais. O clima
+            “bipolar” da Índia, que vai
+            do tropical ao frio, disponibilizou uma ampla variedade de ingredientes para as muitas escolas de culinária
+            que existem por lá. Em muitos casos, a comida se tornou um marcador de identidade religiosa e social, com
+            vários tabus e preferências.
+            Um exemplo disso é que um segmento da população jainista não consome raízes ou vegetais subterrâneos, isso
+            levou certos grupos a inovar radicalmente com as fontes alimentares consideradas aceitáveis. O
+            vegetarianismo a longa data entre as
+            secções da Índia ‘s hindus, budistas e jainistas têm exercido uma forte influência sobre a culinária
+            indiana. As pessoas que seguem uma dieta vegetariana rigorosa representam de 20 a 42 por cento da população
+            indiana, enquanto menos de 30
             por cento consomem carne regularmente.</p>
 
         <h3>Conheça abaixo algumas curiosidades sobre a culinária indiana:</h3>
 
-        <p>A Índia é justamente chamada de Terra das Especiarias. Nenhum país do mundo produz tantas variedades de especiarias quanto a Índia. Comerciantes gregos, romanos e árabes contribuíram muito para os primeiros sabores estrangeiros da culinária indiana.
-            Os principais ingredientes utilizados na culinária indiana, como batata, tomate e pimenta, não têm origem indiana. Eles foram trazidos para a Índia pelos portugueses. O primeiro restaurante indiano nos EUA foi aberto em meados da década de
-            1960. Hoje, existem cerca de 80.000 restaurantes indianos na América. Pouco se sabe sobre os hábitos alimentares da primeira civilização indiana, (a Civilização do Vale do Indo), porque o idioma antigo ainda não foi decifrado. A pimenta é
-            conhecida como o rei das especiarias, porque combina bem com tudo. O sistema alimentar indiano classifica os alimentos em três categorias – saátvico (legumes frescos e suco), raajsic (comida oleosa e picante) e taamsico (carne e licor). O
-            alimento saátvico leva você à estados mais elevados de consciência. O alimento raajsic é a base da atividade e do movimento. A comida taamsica traz sentimentos negativos.</p>
-            <p>Fonte: <a href="https://deliciasculinarias.com.br/culinaria-indiana/">Delícias Culinárias</a> e <a href="https://www.adventureclub.com.br/blog/curiosidades/ervas-temperos-e-especiarias-conheca-a-rica-culinaria-da-india/#:~:text=Entre%20as%20especiarias%20mais%20usadas,mostarda%20preta%2C%20c%C3%BArcuma%20e%20cravo.">Adventure Club</a></p>
-        </section>
+        <p>A Índia é justamente chamada de Terra das Especiarias. Nenhum país do mundo produz tantas variedades de
+            especiarias quanto a Índia. Comerciantes gregos, romanos e árabes contribuíram muito para os primeiros
+            sabores estrangeiros da culinária indiana.
+            Os principais ingredientes utilizados na culinária indiana, como batata, tomate e pimenta, não têm origem
+            indiana. Eles foram trazidos para a Índia pelos portugueses. O primeiro restaurante indiano nos EUA foi
+            aberto em meados da década de
+            1960. Hoje, existem cerca de 80.000 restaurantes indianos na América. Pouco se sabe sobre os hábitos
+            alimentares da primeira civilização indiana, (a Civilização do Vale do Indo), porque o idioma antigo ainda
+            não foi decifrado. A pimenta é
+            conhecida como o rei das especiarias, porque combina bem com tudo. O sistema alimentar indiano classifica os
+            alimentos em três categorias – saátvico (legumes frescos e suco), raajsic (comida oleosa e picante) e
+            taamsico (carne e licor). O
+            alimento saátvico leva você à estados mais elevados de consciência. O alimento raajsic é a base da atividade
+            e do movimento. A comida taamsica traz sentimentos negativos.</p>
+        <p>Fonte: <a href="https://deliciasculinarias.com.br/culinaria-indiana/">Delícias Culinárias</a> e <a
+                href="https://www.adventureclub.com.br/blog/curiosidades/ervas-temperos-e-especiarias-conheca-a-rica-culinaria-da-india/#:~:text=Entre%20as%20especiarias%20mais%20usadas,mostarda%20preta%2C%20c%C3%BArcuma%20e%20cravo.">Adventure
+                Club</a></p>
+    </section>
     <footer id="rodape">
         <a href="https://www.instagram.com/" target="_blank"><img src="imagens/instagram.png" /></a>
         <a href="https://www.youtube.com/" target="_blank"><img src="imagens/youtube.png" /></a>
