--- a/contato.html
+++ b/contato.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="imagens/logo.png">
     <title>FLAVORA | Contato</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,6 +15,7 @@
     <link rel="stylesheet" href="css/contato.css">
 </head>
 <script src="js/script.js"></script>
+
 <body>
     <header id="cabecalho">
         <img src="imagens/logo.svg" alt="Logo FLAVORA" id="logo">
