--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="imagens/logo.png">
     <title>FLAVORA | Comida & Cultura</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
@@ -57,8 +60,11 @@
         <h2>O nosso blog</h2>
         <div id="nossaH">
             <div style="max-width: 600px;">
-                <p>Confira o nosso blog para sempre se manter atualizado das últimas novidades do passado. Aqui buscamos unir receitas deliciosas de culturas ao redor do planeta ao mesmo tempo que trazemos o que há por trás disso, como o aspecto cultural
-                    afeta a alimentação da população e quão rico é tudo isso. Acesse a área blog do site para as últimas publicações.
+                <p>Confira o nosso blog para sempre se manter atualizado das últimas novidades do passado. Aqui buscamos
+                    unir receitas deliciosas de culturas ao redor do planeta ao mesmo tempo que trazemos o que há por
+                    trás disso, como o aspecto cultural
+                    afeta a alimentação da população e quão rico é tudo isso. Acesse a área blog do site para as últimas
+                    publicações.
                 </p>
                 <a href="blog.html" class="aButton">Saiba mais</a>
             </div>
